# calamity

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .prettierrc  .tokeignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.debug.sh  build.release.sh  build.sh  configure  run.debug.sh  run.release.sh
calamity/: .gitignore  build.linux.yaml  build.win32.yaml  build.yaml
calamity/include/: common.h  common.hpp  zcommon.hpp
calamity/res/: temp.txt
calamity/src/: calamity.c  calamity.cpp
calamity/src/event/: event.hpp  event_system.hpp
calamity/src/event/internal/: dispatcher.cpp  dispatcher.hpp  emitter.cpp  emitter.hpp  event.cpp  event.hpp  listener.cpp  listener.hpp
calamity/src/graphics/: manager.cpp  manager.hpp
calamity/src/graphics/internal/: shader.cpp  shader.hpp  types.hpp  window.cpp  (+1 more)
calamity/src/render/: graphics.hpp
calamity/src/utils/: console.c  console.h  file.c  file.cpp  file.h  file.hpp  hash.hpp  log.c  log.h
calamity/src/yaml/: lookup.hpp  manager.cpp  manager.hpp  parser.cpp  parser.hpp  types.cpp  types.hpp
docs/: ROADMAP.md
docs/wiki/: .eslintignore  copyStaticAssets.ts  package.json  tsconfig.json
docs/wiki/src/: app.ts  server.ts
docs/wiki/views/: _layout.pug  home.pug
tools/map-editor/: .babelrc  .gitignore  .prettierrc  README.txt  package.json
tools/map-editor/src/: app.ts  server.ts
tools/map-editor/views/: _layout.pug  index.pug
tools/py-build/: README.txt  build.default.yaml  pyproject.toml
tools/py-build/src/: py-build.py
tools/py-build/src/utils/: config.py  file.py  logger.py  types.py
(+30 files in other folders)
