[tool.poetry]
name = "py-build"
version = "0.1.1"
description = "Simple build system"
authors = ["claymore <marekczjk@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.9"
colorama = "^0.4.4"
docopt = "^0.6.2"
flatdict = "^4.0.1"
python-dotenv = "^0.17.0"
PyYAML = "^5.4.1"
structlog = "^21.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
